# FinSight

./: MANIFEST.in  README.md  example_app.py  pyproject.toml
finegist/: __init__.py  budget.py  currency_converter.py  debt_manager.py  expense_tracker.py  financial_goal_planner.py  investment_portfolio.py  loan_repayment_calculator.py  net_worth_calculator.py  savings_calculator.py  tax_estimator.py
finegist.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
finegist/cache/: exchange_rates.json
tests/: test_budget.py  test_currency_converter.py  test_debt_manager.py  test_expense_tracker.py  test_financial_goal_planner.py  test_invesment_portofolio.py  test_loan_repayment_calculator.py  test_net_worth_calculator.py  test_savings_calculator.py  test_tax_estimator.py
