[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finegist"
version = "0.0.1"
description = "Finance Strategist"
readme = "README.md"
authors = [
    {name = "rifqanzalbina", email = "zalbinarifqan19@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: Indonesian",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.6"
dependencies = []
[project.urls]
Homepage = "https://github.com/rifqanzalbina/FinSight"
"Bug Tracker" = "https://github.com/rifqanzalbina/FinSight/issues"

[tool.setuptools]
license-files = []
packages = ["finegist"]
include-package-data = true

